--- a/src/dawn/CMakeLists.txt
+++ b/src/dawn/CMakeLists.txt
@@ -34,36 +34,18 @@ add_subdirectory(common)
 add_subdirectory(platform)
 add_subdirectory(native)
 add_subdirectory(wire)
-# TODO(dawn:269): Remove once the implementation-based swapchains are removed.
 add_subdirectory(utils)
-add_subdirectory(glfw)
-add_subdirectory(tests/benchmarks)
 
+if (DAWN_BUILD_BENCHMARKS)
+    add_subdirectory(tests/benchmarks)
+endif()
+if(DAWN_USE_GLFW)
+    add_subdirectory(glfw)
+endif()
 if (DAWN_BUILD_SAMPLES)
-    #TODO(dawn:269): Add this once implementation-based swapchains are removed.
-    #add_subdirectory(src/utils)
     add_subdirectory(samples)
 endif()
-
 if (DAWN_BUILD_NODE_BINDINGS)
-    set(NODE_BINDING_DEPS
-        ${NODE_ADDON_API_DIR}
-        ${NODE_API_HEADERS_DIR}
-        ${WEBGPU_IDL_PATH}
-    )
-    foreach(DEP ${NODE_BINDING_DEPS})
-        if (NOT EXISTS ${DEP})
-            message(FATAL_ERROR
-                "DAWN_BUILD_NODE_BINDINGS requires missing dependency '${DEP}'\n"
-                "Please follow the 'Fetch dependencies' instructions at:\n"
-                "./src/dawn/node/README.md"
-            )
-        endif()
-    endforeach()
-    if (NOT CMAKE_POSITION_INDEPENDENT_CODE)
-        message(FATAL_ERROR "DAWN_BUILD_NODE_BINDINGS requires building with DAWN_ENABLE_PIC")
-    endif()
-
     add_subdirectory(node)
 endif()
 
