Factor ErrorSink out of DeviceBase
ErrorSink has lots of nice error-handling niceities that would be
useful on the Instance as well.

Bug: dawn:1833
Change-Id: I2cfa20335eb6cc037d1910c190da72cdd8d8963d

--- a/src/dawn/native/BUILD.gn
+++ b/src/dawn/native/BUILD.gn
@@ -276,6 +276,7 @@ source_set("sources") {
     "ErrorInjector.h",
     "ErrorScope.cpp",
     "ErrorScope.h",
+    "ErrorSink.h",
     "EventManager.cpp",
     "EventManager.h",
     "ExecutionQueue.cpp",
