[Static samplers] Add implementation in frontend
This CL adds end2end tests of static sampler usage and provides an
initial cross-platform implementation done in the frontend. An
implementation in the Vulkan backend will follow, and D3D12 and Metal
backend implementations will come along later.

Bug: dawn:2463
Change-Id: Ia446a9adee2c763981b89477faafa10a47a30969

--- a/src/dawn/tests/BUILD.gn
+++ b/src/dawn/tests/BUILD.gn
@@ -652,6 +652,7 @@ source_set("end2end_tests_sources") {
     "end2end/ShaderF16Tests.cpp",
     "end2end/ShaderTests.cpp",
     "end2end/ShaderValidationTests.cpp",
+    "end2end/StaticSamplerTests.cpp",
     "end2end/StorageTextureTests.cpp",
     "end2end/SubresourceRenderAttachmentTests.cpp",
     "end2end/Texture3DTests.cpp",
