--- a/tools/android/webgpu/build.gradle
+++ b/tools/android/webgpu/build.gradle
@@ -58,6 +58,17 @@ android {
             headers "src/main/cpp/gen/include"
         }
     }
+    kotlinOptions {
+        jvmTarget = '17'
+    }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_17
+    }
+}
+
+dependencies {
+    implementation 'androidx.core:core-ktx:1.12.0'
+    testImplementation 'junit:junit:4.12'
 }
 
 project.afterEvaluate {
