Revert "Make dawn_proc print a warning if dawnProcSetProcs is not called."
This reverts commit 9ab14405904f8d99a51d675416968c8e1fec7818.

Reason for revert: static initializers breaking roll into Chromium.
Example failure: https://ci.chromium.org/ui/p/chromium/builders/try/android-binary-size/1842408/overview

Original change's description:
> Make dawn_proc print a warning if dawnProcSetProcs is not called.
>
> Fixed: dawn:2488
> Change-Id: Ifc65fef161710e775032a1c7930db307a921612a
> Reviewed-on: https://dawn-review.googlesource.com/c/dawn/+/182120
> Commit-Queue: Corentin Wallez <cwallez@chromium.org>
> Reviewed-by: Austin Eng <enga@chromium.org>

# Not skipping CQ checks because original CL landed > 1 day ago.

Change-Id: Ie5cabe0569be57734f7562a23ca452ce7dfbd32e

--- a/src/dawn/BUILD.gn
+++ b/src/dawn/BUILD.gn
@@ -52,7 +52,7 @@ source_set("cpp") {
 dawn_json_generator("proc_gen") {
   target = "proc"
   outputs = [
-    "src/dawn/dawn_proc.cpp",
+    "src/dawn/dawn_proc.c",
     "src/dawn/dawn_thread_dispatch_proc.cpp",
   ]
 }
