[tintd] Handle unicode + improve signature help
LSP defaults to 'character' offsets in UTF-16 code points. Convert to / from tint's internal UTF-8 representation as part of the conversion utilities.

Also improve the function signature help.

Change-Id: I6b523e9ef92809306eb09278ce64ef018cca29f9

--- a/src/tint/lang/wgsl/ls/BUILD.gn
+++ b/src/tint/lang/wgsl/ls/BUILD.gn
@@ -66,6 +66,7 @@ if (tint_build_tintd && tint_build_wgsl_reader) {
       "set_trace.cc",
       "signature_help.cc",
       "symbols.cc",
+      "utils.cc",
       "utils.h",
     ]
     deps = [
