[tintd] Implement TextDocumentCompletionRequest
This is a first-pass effort. To correctly handle completions while
typing, the resolver will need to handle ASTs with errors and will need
to produce semantic info even when the resolver errors.

Bug: tint:2127
Change-Id: I8351215938fcbdc65d9f03d097a5e911e954aaaf

--- a/src/tint/lang/wgsl/ls/BUILD.bazel
+++ b/src/tint/lang/wgsl/ls/BUILD.bazel
@@ -42,6 +42,7 @@ cc_library(
     "cancel_request.cc",
     "change_configuration.cc",
     "change_watched_files.cc",
+    "completions.cc",
     "definition.cc",
     "diagnostics.cc",
     "document.cc",
@@ -112,6 +113,7 @@ cc_library(
   name = "test",
   alwayslink = True,
   srcs = [
+    "completions_test.cc",
     "definition_test.cc",
     "diagnostics_test.cc",
     "helpers_test.cc",
