--- a/src/tint/lang/wgsl/ls/BUILD.gn
+++ b/src/tint/lang/wgsl/ls/BUILD.gn
@@ -47,6 +47,7 @@ if (tint_build_tintd && tint_build_wgsl_reader) {
       "cancel_request.cc",
       "change_configuration.cc",
       "change_watched_files.cc",
+      "completions.cc",
       "definition.cc",
       "diagnostics.cc",
       "document.cc",
@@ -112,6 +113,7 @@ if (tint_build_unittests) {
   if (tint_build_tintd && tint_build_wgsl_reader) {
     tint_unittests_source_set("unittests") {
       sources = [
+        "completions_test.cc",
         "definition_test.cc",
         "diagnostics_test.cc",
         "helpers_test.cc",
