Adding BUILD.gn to generate kotlin bindings
target_os must be "android"

Change-Id: I9d850678db92aec5b3da2ec8a946169b375ae436

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -67,6 +67,12 @@ group("cmds") {
   }
 }
 
+if (is_android) {
+  group("android") {
+    deps = [ "tools/android" ]
+  }
+}
+
 group("all") {
   testonly = true
   deps = [
@@ -76,6 +82,9 @@ group("all") {
     ":libs",
     ":tests",
   ]
+  if (is_android) {
+    deps += [ ":android" ]
+  }
 }
 
 if (enable_rust) {
