Add dawn-try-mac-amd-exp to Dawn, use it in CTS roller
Fixed: dawn:2495
Change-Id: I62a3d330795f9b80aff96b8a6b78746b80b21b42

--- a/tools/src/cmd/cts/config.json
+++ b/tools/src/cmd/cts/config.json
@@ -59,6 +59,11 @@
       "Bucket": "try",
       "Builder": "dawn-try-mac-intel-exp"
     },
+    "Mac-x64-AMD-Experimental": {
+      "Project": "chromium",
+      "Bucket": "try",
+      "Builder": "dawn-try-mac-amd-exp"
+    },
     "Mac-Arm64": {
       "Project": "chromium",
       "Bucket": "try",
