--- a/tools/src/cmd/cts/config.json
+++ b/tools/src/cmd/cts/config.json
@@ -39,6 +39,11 @@
       "Bucket": "try",
       "Builder": "android-dawn-arm64-rel"
     },
+    "Android-Arm64-Experimental": {
+      "Project": "chromium",
+      "Bucket": "try",
+      "Builder": "android-dawn-arm64-exp-rel"
+    },
     "Win": {
       "Project": "chromium",
       "Bucket": "try",
